--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.22",
-    "google-map-react": "^1.1.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "pigeon-maps": "^0.11.10",
+    "pigeon-overlay": "^0.2.2",
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
