--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactjs-popup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
